hphp/hack/test/typecheck/defined/condition_conjunction.php.exp
File "condition_conjunction.php", line 4, characters 8-9:
Assignments can no longer be used as expressions. Pull the assignment out into a separate statement. (Parsing[1002])
File "condition_conjunction.php", line 4, characters 21-22:
Assignments can no longer be used as expressions. Pull the assignment out into a separate statement. (Parsing[1002])
File "condition_conjunction.php", line 4, characters 34-35:
Assignments can no longer be used as expressions. Pull the assignment out into a separate statement. (Parsing[1002])
File "condition_conjunction.php", line 8, characters 14-15:
Assignments can no longer be used as expressions. Pull the assignment out into a separate statement. (Parsing[1002])
File "condition_conjunction.php", line 23, characters 10-11:
Assignments can no longer be used as expressions. Pull the assignment out into a separate statement. (Parsing[1002])
File "condition_conjunction.php", line 23, characters 23-24:
Assignments can no longer be used as expressions. Pull the assignment out into a separate statement. (Parsing[1002])
File "condition_conjunction.php", line 23, characters 36-37:
Assignments can no longer be used as expressions. Pull the assignment out into a separate statement. (Parsing[1002])
File "condition_conjunction.php", line 27, characters 14-15:
Assignments can no longer be used as expressions. Pull the assignment out into a separate statement. (Parsing[1002])
File "condition_conjunction.php", line 11, characters 20-21:
Variable `$z` is undefined, or not always defined. (Naming[2050])
  File "condition_conjunction.php", line 4, characters 8-9:
  Did you mean `$y` instead?
File "condition_conjunction.php", line 12, characters 20-21:
Variable `$u` is undefined, or not always defined. (Naming[2050])
  File "condition_conjunction.php", line 4, characters 8-9:
  Did you mean `$y` instead?
File "condition_conjunction.php", line 17, characters 18-19:
Variable `$z` is undefined, or not always defined. (Naming[2050])
  File "condition_conjunction.php", line 4, characters 8-9:
  Did you mean `$y` instead?
File "condition_conjunction.php", line 18, characters 18-19:
Variable `$u` is undefined, or not always defined. (Naming[2050])
  File "condition_conjunction.php", line 4, characters 8-9:
  Did you mean `$y` instead?
File "condition_conjunction.php", line 19, characters 18-19:
Variable `$t` is undefined, or not always defined. (Naming[2050])
  File "condition_conjunction.php", line 4, characters 8-9:
  Did you mean `$y` instead?
File "condition_conjunction.php", line 29, characters 20-21:
Variable `$z` is undefined, or not always defined. (Naming[2050])
  File "condition_conjunction.php", line 23, characters 28-29:
  Did you mean `$y` instead?
File "condition_conjunction.php", line 30, characters 20-21:
Variable `$u` is undefined, or not always defined. (Naming[2050])
  File "condition_conjunction.php", line 23, characters 28-29:
  Did you mean `$y` instead?
File "condition_conjunction.php", line 34, characters 18-19:
Variable `$z` is undefined, or not always defined. (Naming[2050])
  File "condition_conjunction.php", line 23, characters 28-29:
  Did you mean `$y` instead?
File "condition_conjunction.php", line 35, characters 18-19:
Variable `$u` is undefined, or not always defined. (Naming[2050])
  File "condition_conjunction.php", line 23, characters 28-29:
  Did you mean `$y` instead?
File "condition_conjunction.php", line 36, characters 18-19:
Variable `$t` is undefined, or not always defined. (Naming[2050])
  File "condition_conjunction.php", line 23, characters 28-29:
  Did you mean `$y` instead?
File "condition_conjunction.php", line 10, characters 16-17:
Invalid argument (Typing[4110])
  File "condition_conjunction.php", line 39, characters 21-23:
  Expected `int`
  File "condition_conjunction.php", line 3, characters 19-22:
  But got `?int`
File "condition_conjunction.php", line 16, characters 14-15:
Invalid argument (Typing[4110])
  File "condition_conjunction.php", line 39, characters 21-23:
  Expected `int`
  File "condition_conjunction.php", line 3, characters 19-22:
  But got `?int`
